[gd_scene load_steps=12 format=4 uid="uid://dv8gvl3u1h7jo"]

[ext_resource type="TileSet" uid="uid://wuv24cihm35a" path="res://resources/env.tres" id="1_1r51g"]
[ext_resource type="Script" path="res://scenes/levels/outro.gd" id="1_wchtm"]
[ext_resource type="Resource" uid="uid://clnd6jnhggj66" path="res://resources/levels/level_outro.tres" id="2_g2o13"]
[ext_resource type="PackedScene" uid="uid://2u1mu6smetqe" path="res://scenes/objects/box_angle_open.tscn" id="2_gxm6m"]
[ext_resource type="PackedScene" uid="uid://cna5b0cu8gvw1" path="res://scenes/objects/charger.tscn" id="3_6ggfr"]
[ext_resource type="PackedScene" uid="uid://ykv6f55ab02i" path="res://scenes/robot.tscn" id="4_j21tk"]
[ext_resource type="PackedScene" uid="uid://dkk0isei6ttad" path="res://scenes/game_camera.tscn" id="5_80b03"]
[ext_resource type="PackedScene" uid="uid://blhiww3e10vdc" path="res://scenes/objects/slippers_blue.tscn" id="6_3wc6g"]
[ext_resource type="PackedScene" uid="uid://qbhqvqkbs31j" path="res://scenes/ui/pause_menu.tscn" id="7_0jhxn"]
[ext_resource type="Texture2D" uid="uid://dt7kwq10k4sls" path="res://assets/ui/closedeye.png" id="7_6kh5w"]
[ext_resource type="Texture2D" uid="uid://c8mc8tww2rf83" path="res://assets/ui/ear.png" id="8_vxd5m"]

[node name="Outro" type="Node2D"]
script = ExtResource("1_wchtm")
_level_definition = ExtResource("2_g2o13")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -7783.0
offset_top = -3800.0
offset_right = 7823.0
offset_bottom = 3840.0
color = Color(0, 0, 0, 1)

[node name="Room" type="Node2D" parent="."]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Floor" type="TileMapLayer" parent="Room"]
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAD//wAAAQAAAAAAAAD+/wAAAQAAAAAAAAD+////AQAAAAAAAAD///7/AQAAAAAAAAAAAP7/AQAAAAAAAAABAP7/AQAAAAAAAAABAP//AQAAAAAAAAABAAAAAQAAAAAAAAD+//7/AQAAAAAAAAAAAP//AQAAAAAAAAD/////AQAAAAAAAAD+/wEAAQAAAAAAAAD//wEAAQAAAAAAAAAAAAEAAQAAAAAAAAABAAEAAQAAAAAAAAACAAEAAQAAAAAAAAACAAAAAQAAAAAAAAACAP//AQAAAAAAAAACAP7/AQAAAAAAAAD5//7/AQAAAAAAAAD5//3/AQAAAAAAAAD6//3/AQAAAAAAAAD7//3/AQAAAAAAAAD7//z/AQAAAAAAAAD8//z/AQAAAAAAAAD8//3/AQAAAAAAAAD9//3/AQAAAAAAAAD9//7/AQAAAAAAAAD8//7/AQAAAAAAAAD8////AQAAAAAAAAD7////AQAAAAAAAAD6////AQAAAAAAAAD5////AQAAAAAAAAD4//7/AQAAAAAAAAD3//7/AQAAAAAAAAD3//3/AQAAAAAAAAD3//z/AQAAAAAAAAD3//v/AQAAAAAAAAD3//r/AQAAAAAAAAD3//n/AQAAAAAAAAD2//n/AQAAAAAAAAD2//j/AQAAAAAAAAD3//j/AQAAAAAAAAD1//j/AQAAAAAAAAD0//j/AQAAAAAAAADz//j/AQAAAAAAAADy//j/AQAAAAAAAADy//n/AQAAAAAAAADy//r/AQAAAAAAAADy//v/AQAAAAAAAADy//z/AQAAAAAAAADy//3/AQAAAAAAAADy//7/AQAAAAAAAADy////AQAAAAAAAADy/wAAAQAAAAAAAADy/wEAAQAAAAAAAADy/wIAAQAAAAAAAADy/wMAAQAAAAAAAADy/wQAAQAAAAAAAADy/wUAAQAAAAAAAADy/wYAAQAAAAAAAAD7/wQAAQAAAAAAAAAPAAsAAQAAAAAAAAAOAAsAAQAAAAAAAAANAAsAAQAAAAAAAAAMAAsAAQAAAAAAAAALAAsAAQAAAAAAAAAKAAsAAQAAAAAAAAAJAAsAAQAAAAAAAAAIAAsAAQAAAAAAAAAHAAsAAQAAAAAAAAAGAAsAAQAAAAAAAAAFAAsAAQAAAAAAAAAEAAsAAQAAAAAAAAADAAsAAQAAAAAAAAACAAsAAQAAAAAAAAABAAsAAQAAAAAAAAAAAAsAAQAAAAAAAAD//wsAAQAAAAAAAAD+/wsAAQAAAAAAAAD9/wsAAQAAAAAAAAD8/wsAAQAAAAAAAAD7/wsAAQAAAAAAAAD6/wsAAQAAAAAAAAD5/wsAAQAAAAAAAAD5/woAAQAAAAAAAAD4/woAAQAAAAAAAAD3/woAAQAAAAAAAAD2/woAAQAAAAAAAAD1/woAAQAAAAAAAAD0/woAAQAAAAAAAAD4/wsAAQAAAAAAAAD3/wsAAQAAAAAAAAD2/wsAAQAAAAAAAAD1/wsAAQAAAAAAAAD0/wsAAQAAAAAAAADz/wsAAQAAAAAAAADy/wsAAQAAAAAAAADy/woAAQAAAAAAAADy/wkAAQAAAAAAAADy/wgAAQAAAAAAAADy/wcAAQAAAAAAAAAPAAoAAQAAAAAAAAAPAAkAAQAAAAAAAAAPAAgAAQAAAAAAAAAOAAgAAQAAAAAAAAAOAAcAAQAAAAAAAAAOAAYAAQAAAAAAAAAPAAcAAQAAAAAAAAAPAAYAAQAAAAAAAAAPAAUAAQAAAAAAAAAOAAUAAQAAAAAAAAAOAAQAAQAAAAAAAAAOAAMAAQAAAAAAAAAOAAIAAQAAAAAAAAAPAAQAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAIAAQAAAAAAAAAPAAEAAQAAAAAAAAAPAAAAAQAAAAAAAAALAP//AQAAAAAAAAAPAP//AQAAAAAAAAAPAP7/AQAAAAAAAAAPAP3/AQAAAAAAAAAPAPz/AQAAAAAAAAAPAPv/AQAAAAAAAAAPAPr/AQAAAAAAAAAPAPn/AQAAAAAAAAAPAPj/AQAAAAAAAAAOAPj/AQAAAAAAAAANAPj/AQAAAAAAAAAMAPj/AQAAAAAAAAALAPj/AQAAAAAAAAAKAPj/AQAAAAAAAAAJAPj/AQAAAAAAAAAIAPj/AQAAAAAAAAAHAPj/AQAAAAAAAAAGAPj/AQAAAAAAAAAFAPj/AQAAAAAAAAAEAPj/AQAAAAAAAAADAPj/AQAAAAAAAAACAPj/AQAAAAAAAAABAPj/AQAAAAAAAAAAAPj/AQAAAAAAAAD///j/AQAAAAAAAAD+//j/AQAAAAAAAAD9//j/AQAAAAAAAAD8//j/AQAAAAAAAAD7//j/AQAAAAAAAAD6//j/AQAAAAAAAAD5//j/AQAAAAAAAAD4//j/AQAAAAAAAAAGAP7/AQAAAAAAAAAGAP3/AQAAAAAAAAAGAPz/AQAAAAAAAAAGAPv/AQAAAAAAAAAGAPr/AQAAAAAAAAAGAPn/AQAAAAAAAAAFAPn/AQAAAAAAAAAEAPn/AQAAAAAAAAADAPn/AQAAAAAAAAACAPn/AQAAAAAAAAABAPn/AQAAAAAAAAAAAPn/AQAAAAAAAAD///n/AQAAAAAAAAD+//n/AQAAAAAAAAD9//n/AQAAAAAAAAD8//n/AQAAAAAAAAD7//n/AQAAAAAAAAD6//n/AQAAAAAAAAD5//n/AQAAAAAAAAD4//n/AQAAAAAAAAD4//r/AQAAAAAAAAD4//v/AQAAAAAAAAD4//z/AQAAAAAAAAD4//3/AQAAAAAAAAD5//z/AQAAAAAAAAD5//v/AQAAAAAAAAD5//r/AQAAAAAAAAD6//r/AQAAAAAAAAD6//v/AQAAAAAAAAD6//z/AQAAAAAAAAD7//v/AQAAAAAAAAD7//r/AQAAAAAAAAD8//r/AQAAAAAAAAD8//v/AQAAAAAAAAD9//v/AQAAAAAAAAD9//r/AQAAAAAAAAD+//r/AQAAAAAAAAD+//v/AQAAAAAAAAD+//z/AQAAAAAAAAD9//z/AQAAAAAAAAD+//3/AQAAAAAAAAD///3/AQAAAAAAAAD///z/AQAAAAAAAAD///v/AQAAAAAAAAD///r/AQAAAAAAAAAAAPr/AQAAAAAAAAAAAPv/AQAAAAAAAAAAAPz/AQAAAAAAAAAAAP3/AQAAAAAAAAABAP3/AQAAAAAAAAABAPz/AQAAAAAAAAABAPv/AQAAAAAAAAABAPr/AQAAAAAAAAACAPr/AQAAAAAAAAACAPv/AQAAAAAAAAACAPz/AQAAAAAAAAACAP3/AQAAAAAAAAADAP3/AQAAAAAAAAADAPz/AQAAAAAAAAADAPv/AQAAAAAAAAADAPr/AQAAAAAAAAAEAPr/AQAAAAAAAAAEAPv/AQAAAAAAAAAEAPz/AQAAAAAAAAAEAP3/AQAAAAAAAAAEAP7/AQAAAAAAAAADAP7/AQAAAAAAAAADAP//AQAAAAAAAAADAAAAAQAAAAAAAAADAAEAAQAAAAAAAAADAAIAAQAAAAAAAAACAAIAAQAAAAAAAAABAAIAAQAAAAAAAAAAAAIAAQAAAAAAAAD//wIAAQAAAAAAAAD+/wIAAQAAAAAAAAD9/wIAAQAAAAAAAAD9/wEAAQAAAAAAAAD9/wAAAQAAAAAAAAD9////AQAAAAAAAAD8/wAAAQAAAAAAAAD7/wAAAQAAAAAAAAD6/wAAAQAAAAAAAAD5/wAAAQAAAAAAAAD4/wAAAQAAAAAAAAD4////AQAAAAAAAAD3////AQAAAAAAAAD2////AQAAAAAAAAD2//7/AQAAAAAAAAD2//3/AQAAAAAAAAD2//z/AQAAAAAAAAD2//v/AQAAAAAAAAD2//r/AQAAAAAAAAD1//r/AQAAAAAAAAD1//n/AQAAAAAAAAD0//n/AQAAAAAAAADz//n/AQAAAAAAAADz//r/AQAAAAAAAADz//v/AQAAAAAAAADz//z/AQAAAAAAAADz//3/AQAAAAAAAADz//7/AQAAAAAAAADz////AQAAAAAAAADz/wAAAQAAAAAAAADz/wEAAQAAAAAAAADz/wIAAQAAAAAAAADz/wMAAQAAAAAAAADz/wQAAQAAAAAAAADz/wUAAQAAAAAAAADz/wYAAQAAAAAAAADz/wcAAQAAAAAAAADz/wgAAQAAAAAAAADz/wkAAQAAAAAAAADz/woAAQAAAAAAAAD0/wkAAQAAAAAAAAD0/wgAAQAAAAAAAAD0/wcAAQAAAAAAAAD0/wYAAQAAAAAAAAD0/wUAAQAAAAAAAAD0/wQAAQAAAAAAAAD0/wMAAQAAAAAAAAD0/wIAAQAAAAAAAAD0/wEAAQAAAAAAAAD0/wAAAQAAAAAAAAD0////AQAAAAAAAAD0//7/AQAAAAAAAAD0//3/AQAAAAAAAAD0//z/AQAAAAAAAAD0//v/AQAAAAAAAAD0//r/AQAAAAAAAAD1//v/AQAAAAAAAAD1//z/AQAAAAAAAAD1//3/AQAAAAAAAAD1//7/AQAAAAAAAAD1////AQAAAAAAAAD1/wAAAQAAAAAAAAD1/wEAAQAAAAAAAAD1/wIAAQAAAAAAAAD1/wMAAQAAAAAAAAD1/wQAAQAAAAAAAAD1/wUAAQAAAAAAAAD1/wYAAQAAAAAAAAD1/wcAAQAAAAAAAAD1/wgAAQAAAAAAAAD1/wkAAQAAAAAAAAD2/wkAAQAAAAAAAAD2/wgAAQAAAAAAAAD2/wcAAQAAAAAAAAD2/wYAAQAAAAAAAAD2/wUAAQAAAAAAAAD2/wQAAQAAAAAAAAD2/wMAAQAAAAAAAAD2/wIAAQAAAAAAAAD2/wEAAQAAAAAAAAD2/wAAAQAAAAAAAAD3/wAAAQAAAAAAAAD3/wEAAQAAAAAAAAD3/wIAAQAAAAAAAAD3/wMAAQAAAAAAAAD3/wQAAQAAAAAAAAD3/wUAAQAAAAAAAAD3/wYAAQAAAAAAAAD3/wcAAQAAAAAAAAD3/wgAAQAAAAAAAAD3/wkAAQAAAAAAAAD4/wkAAQAAAAAAAAD4/wgAAQAAAAAAAAD4/wcAAQAAAAAAAAD4/wYAAQAAAAAAAAD4/wUAAQAAAAAAAAD4/wQAAQAAAAAAAAD4/wMAAQAAAAAAAAD4/wIAAQAAAAAAAAD4/wEAAQAAAAAAAAD5/wEAAQAAAAAAAAD5/wIAAQAAAAAAAAD5/wMAAQAAAAAAAAD5/wQAAQAAAAAAAAD5/wUAAQAAAAAAAAD5/wYAAQAAAAAAAAD5/wcAAQAAAAAAAAD5/wgAAQAAAAAAAAD5/wkAAQAAAAAAAAD6/wkAAQAAAAAAAAD6/wgAAQAAAAAAAAD6/wcAAQAAAAAAAAD6/wYAAQAAAAAAAAD6/wUAAQAAAAAAAAD6/wQAAQAAAAAAAAD6/wMAAQAAAAAAAAD6/wIAAQAAAAAAAAD6/wEAAQAAAAAAAAD7/wEAAQAAAAAAAAD7/wIAAQAAAAAAAAD7/wMAAQAAAAAAAAD8/wMAAQAAAAAAAAD8/wIAAQAAAAAAAAD8/wEAAQAAAAAAAAD8/wQAAQAAAAAAAAD8/wUAAQAAAAAAAAD7/wUAAQAAAAAAAAD7/wYAAQAAAAAAAAD7/wcAAQAAAAAAAAD7/wgAAQAAAAAAAAD7/wkAAQAAAAAAAAD7/woAAQAAAAAAAAD6/woAAQAAAAAAAAD8/woAAQAAAAAAAAD8/wkAAQAAAAAAAAD8/wgAAQAAAAAAAAD8/wcAAQAAAAAAAAD8/wYAAQAAAAAAAAD9/wYAAQAAAAAAAAD9/wUAAQAAAAAAAAD9/wQAAQAAAAAAAAD9/wMAAQAAAAAAAAD+/wMAAQAAAAAAAAD+/wQAAQAAAAAAAAD+/wUAAQAAAAAAAAD+/wYAAQAAAAAAAAD+/wcAAQAAAAAAAAD9/wcAAQAAAAAAAAD9/wgAAQAAAAAAAAD9/wkAAQAAAAAAAAD9/woAAQAAAAAAAAD+/woAAQAAAAAAAAD+/wkAAQAAAAAAAAD+/wgAAQAAAAAAAAD//wgAAQAAAAAAAAD//wcAAQAAAAAAAAD//wYAAQAAAAAAAAD//wUAAQAAAAAAAAD//wQAAQAAAAAAAAD//wMAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAAAAAAAcAAQAAAAAAAAAAAAgAAQAAAAAAAAAAAAkAAQAAAAAAAAD//wkAAQAAAAAAAAD//woAAQAAAAAAAAAAAAoAAQAAAAAAAAABAAoAAQAAAAAAAAABAAkAAQAAAAAAAAABAAgAAQAAAAAAAAABAAcAAQAAAAAAAAABAAYAAQAAAAAAAAABAAUAAQAAAAAAAAABAAQAAQAAAAAAAAABAAMAAQAAAAAAAAACAAMAAQAAAAAAAAACAAQAAQAAAAAAAAACAAUAAQAAAAAAAAACAAYAAQAAAAAAAAACAAcAAQAAAAAAAAACAAgAAQAAAAAAAAACAAkAAQAAAAAAAAACAAoAAQAAAAAAAAADAAoAAQAAAAAAAAADAAkAAQAAAAAAAAADAAgAAQAAAAAAAAADAAcAAQAAAAAAAAADAAYAAQAAAAAAAAADAAUAAQAAAAAAAAADAAQAAQAAAAAAAAADAAMAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAAAAQAAAAAAAAAEAP//AQAAAAAAAAAFAP//AQAAAAAAAAAFAP7/AQAAAAAAAAAFAP3/AQAAAAAAAAAFAPz/AQAAAAAAAAAFAPv/AQAAAAAAAAAFAPr/AQAAAAAAAAAFAAAAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAFAAQAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAYAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAgAAQAAAAAAAAAEAAkAAQAAAAAAAAAEAAoAAQAAAAAAAAAFAAoAAQAAAAAAAAAFAAkAAQAAAAAAAAAFAAgAAQAAAAAAAAAFAAcAAQAAAAAAAAAFAAYAAQAAAAAAAAAFAAUAAQAAAAAAAAAGAAUAAQAAAAAAAAAGAAQAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAAAAQAAAAAAAAAGAP//AQAAAAAAAAAHAP//AQAAAAAAAAAHAP7/AQAAAAAAAAAHAP3/AQAAAAAAAAAHAPz/AQAAAAAAAAAHAPv/AQAAAAAAAAAHAPr/AQAAAAAAAAAHAPn/AQAAAAAAAAAIAPn/AQAAAAAAAAAIAPr/AQAAAAAAAAAIAPv/AQAAAAAAAAAIAPz/AQAAAAAAAAAIAP3/AQAAAAAAAAAIAP7/AQAAAAAAAAAIAP//AQAAAAAAAAAIAAAAAQAAAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQAAAAAAAAAGAAYAAQAAAAAAAAAGAAcAAQAAAAAAAAAGAAgAAQAAAAAAAAAGAAkAAQAAAAAAAAAGAAoAAQAAAAAAAAAHAAoAAQAAAAAAAAAHAAkAAQAAAAAAAAAHAAgAAQAAAAAAAAAHAAcAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAYAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAQAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAEAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAAAAQAAAAAAAAAJAP//AQAAAAAAAAAJAP7/AQAAAAAAAAAJAP3/AQAAAAAAAAAJAPz/AQAAAAAAAAAJAPv/AQAAAAAAAAAJAPr/AQAAAAAAAAAJAPn/AQAAAAAAAAAKAPn/AQAAAAAAAAAKAPr/AQAAAAAAAAAKAPv/AQAAAAAAAAAKAPz/AQAAAAAAAAAKAP3/AQAAAAAAAAAKAP7/AQAAAAAAAAAKAP//AQAAAAAAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAAJAAgAAQAAAAAAAAAIAAgAAQAAAAAAAAAIAAkAAQAAAAAAAAAIAAoAAQAAAAAAAAAJAAoAAQAAAAAAAAAJAAkAAQAAAAAAAAAKAAkAAQAAAAAAAAAKAAgAAQAAAAAAAAAKAAcAAQAAAAAAAAAKAAYAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAQAAQAAAAAAAAAKAAMAAQAAAAAAAAALAAMAAQAAAAAAAAALAAIAAQAAAAAAAAALAAEAAQAAAAAAAAALAAAAAQAAAAAAAAAMAAAAAQAAAAAAAAAMAP//AQAAAAAAAAAMAP7/AQAAAAAAAAAMAP3/AQAAAAAAAAAMAPz/AQAAAAAAAAAMAPv/AQAAAAAAAAAMAPr/AQAAAAAAAAAMAPn/AQAAAAAAAAALAPn/AQAAAAAAAAALAPr/AQAAAAAAAAALAPv/AQAAAAAAAAALAPz/AQAAAAAAAAALAP3/AQAAAAAAAAALAP7/AQAAAAAAAAANAPn/AQAAAAAAAAANAPr/AQAAAAAAAAANAPv/AQAAAAAAAAANAPz/AQAAAAAAAAANAP3/AQAAAAAAAAANAP7/AQAAAAAAAAANAP//AQAAAAAAAAANAAAAAQAAAAAAAAANAAEAAQAAAAAAAAAMAAEAAQAAAAAAAAAMAAIAAQAAAAAAAAAMAAMAAQAAAAAAAAAMAAQAAQAAAAAAAAALAAQAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAALAAcAAQAAAAAAAAALAAgAAQAAAAAAAAALAAkAAQAAAAAAAAALAAoAAQAAAAAAAAAKAAoAAQAAAAAAAAAMAAoAAQAAAAAAAAAMAAkAAQAAAAAAAAAMAAgAAQAAAAAAAAAMAAcAAQAAAAAAAAAMAAYAAQAAAAAAAAAMAAUAAQAAAAAAAAANAAUAAQAAAAAAAAANAAQAAQAAAAAAAAANAAMAAQAAAAAAAAANAAIAAQAAAAAAAAANAAYAAQAAAAAAAAANAAcAAQAAAAAAAAANAAgAAQAAAAAAAAANAAkAAQAAAAAAAAANAAoAAQAAAAAAAAAOAAoAAQAAAAAAAAAOAAkAAQAAAAAAAAAOAAEAAQAAAAAAAAAOAAAAAQAAAAAAAAAOAP//AQAAAAAAAAAOAP7/AQAAAAAAAAAOAP3/AQAAAAAAAAAOAPz/AQAAAAAAAAAOAPv/AQAAAAAAAAAOAPr/AQAAAAAAAAAOAPn/AQAAAAAAAAD6//7/AQAAAAAAAAD7//7/AQAAAAAAAAA=")
tile_set = ExtResource("1_1r51g")

[node name="Walls" type="TileMapLayer" parent="Room"]
tile_map_data = PackedByteArray("AADx//v/AAABAAAAAADx//r/AAABAAAAAADx//n/AAABAAAAAADx//j/AAABAAAAAADx//f/AAABAAAAAADy//f/AAABAAAAAADz//f/AAABAAAAAAD0//f/AAABAAAAAAD1//f/AAABAAAAAAD2//f/AAABAAAAAAD3//f/AAABAAAAAAD4//f/AAABAAAAAAD5//f/AAABAAAAAAD6//f/AAABAAAAAAD7//f/AAABAAAAAADx//z/AAABAAAAAADx//3/AAABAAAAAADx//7/AAABAAAAAADx////AAABAAAAAADx/wAAAAABAAAAAADx/wEAAAABAAAAAADx/wIAAAABAAAAAADx/wMAAAABAAAAAADx/wQAAAABAAAAAADx/wUAAAABAAAAAADx/wYAAAABAAAAAADx/wcAAAABAAAAAADx/wgAAAABAAAAAADx/wkAAAABAAAAAADx/woAAAABAAAAAADx/wsAAAABAAAAAADx/wwAAAABAAAAAADy/wwAAAABAAAAAADz/wwAAAABAAAAAAD0/wwAAAABAAAAAAD1/wwAAAABAAAAAAD2/wwAAAABAAAAAAD3/wwAAAABAAAAAAD4/wwAAAABAAAAAAD5/wwAAAABAAAAAAD6/wwAAAABAAAAAAD7/wwAAAABAAAAAAD8/wwAAAABAAAAAAD9/wwAAAABAAAAAAD+/wwAAAABAAAAAAD//wwAAAABAAAAAAAAAAwAAAABAAAAAAABAAwAAAABAAAAAAACAAwAAAABAAAAAAADAAwAAAABAAAAAAAEAAwAAAABAAAAAAAFAAwAAAABAAAAAAAGAAwAAAABAAAAAAAHAAwAAAABAAAAAAAIAAwAAAABAAAAAAAJAAwAAAABAAAAAAAKAAwAAAABAAAAAAALAAwAAAABAAAAAAAMAAwAAAABAAAAAAANAAwAAAABAAAAAAAOAAwAAAABAAAAAAAPAAwAAAABAAAAAAAQAAwAAAABAAAAAAAQAAsAAAABAAAAAAAQAAoAAAABAAAAAAAQAAkAAAABAAAAAAAQAAgAAAABAAAAAAAQAAcAAAABAAAAAAAQAAYAAAABAAAAAAAQAAUAAAABAAAAAAAQAAQAAAABAAAAAAAQAAMAAAABAAAAAAAQAAIAAAABAAAAAAAQAAEAAAABAAAAAAAQAAAAAAABAAAAAAAQAP//AAABAAAAAAAQAP7/AAABAAAAAAAQAP3/AAABAAAAAAAQAPz/AAABAAAAAAAQAPv/AAABAAAAAAAQAPr/AAABAAAAAAAQAPn/AAABAAAAAAAQAPj/AAABAAAAAAAQAPf/AAABAAAAAAAPAPf/AAABAAAAAAAOAPf/AAABAAAAAAANAPf/AAABAAAAAAAMAPf/AAABAAAAAAALAPf/AAABAAAAAAAKAPf/AAABAAAAAAAJAPf/AAABAAAAAAAIAPf/AAABAAAAAAAHAPf/AAABAAAAAAAGAPf/AAABAAAAAAAFAPf/AAABAAAAAAAEAPf/AAABAAAAAAADAPf/AAABAAAAAAACAPf/AAABAAAAAAABAPf/AAABAAAAAAAAAPf/AAABAAAAAAD///f/AAABAAAAAAD+//f/AAABAAAAAAD9//f/AAABAAAAAAD8//f/AAABAAAAAADw//f/AAABAAAAAADw//j/AAABAAAAAADw//n/AAABAAAAAADw//r/AAABAAAAAADw//v/AAABAAAAAADw//z/AAABAAAAAADw//3/AAABAAAAAADw//7/AAABAAAAAADw////AAABAAAAAADw/wAAAAABAAAAAADw/wEAAAABAAAAAADw/wIAAAABAAAAAADw/wMAAAABAAAAAADw/wQAAAABAAAAAADw/wUAAAABAAAAAADw/wYAAAABAAAAAADw/wcAAAABAAAAAADw/wgAAAABAAAAAADw/wkAAAABAAAAAADw/woAAAABAAAAAADw/wsAAAABAAAAAADw/wwAAAABAAAAAADw/w0AAAABAAAAAADx/w0AAAABAAAAAADy/w0AAAABAAAAAADz/w0AAAABAAAAAAD0/w0AAAABAAAAAAD1/w0AAAABAAAAAAD2/w0AAAABAAAAAAD3/w0AAAABAAAAAAD4/w0AAAABAAAAAAD5/w0AAAABAAAAAAD6/w0AAAABAAAAAAD7/w0AAAABAAAAAAD8/w0AAAABAAAAAAD9/w0AAAABAAAAAAD+/w0AAAABAAAAAAD//w0AAAABAAAAAAAAAA0AAAABAAAAAAABAA0AAAABAAAAAAACAA0AAAABAAAAAAADAA0AAAABAAAAAAAEAA0AAAABAAAAAAAFAA0AAAABAAAAAAAGAA0AAAABAAAAAAAHAA0AAAABAAAAAAAIAA0AAAABAAAAAAAJAA0AAAABAAAAAAAKAA0AAAABAAAAAAALAA0AAAABAAAAAAAMAA0AAAABAAAAAAANAA0AAAABAAAAAAAOAA0AAAABAAAAAAAPAA0AAAABAAAAAAAQAA0AAAABAAAAAAARAA0AAAABAAAAAAARAAwAAAABAAAAAAARAAsAAAABAAAAAAARAAoAAAABAAAAAAARAAkAAAABAAAAAAARAAgAAAABAAAAAAARAAcAAAABAAAAAAARAAYAAAABAAAAAAARAAUAAAABAAAAAAARAAQAAAABAAAAAAARAAMAAAABAAAAAAARAAIAAAABAAAAAAARAAEAAAABAAAAAAARAAAAAAABAAAAAAARAP//AAABAAAAAAARAP7/AAABAAAAAAARAP3/AAABAAAAAAARAPz/AAABAAAAAAARAPv/AAABAAAAAAARAPr/AAABAAAAAAARAPn/AAABAAAAAAARAPj/AAABAAAAAAARAPf/AAABAAAAAAARAPb/AAABAAAAAAAQAPb/AAABAAAAAAAPAPb/AAABAAAAAAAOAPb/AAABAAAAAAANAPb/AAABAAAAAAAMAPb/AAABAAAAAAALAPb/AAABAAAAAAAKAPb/AAABAAAAAAAJAPb/AAABAAAAAAAIAPb/AAABAAAAAAAHAPb/AAABAAAAAAAGAPb/AAABAAAAAAAFAPb/AAABAAAAAAAEAPb/AAABAAAAAAADAPb/AAABAAAAAAACAPb/AAABAAAAAAABAPb/AAABAAAAAAAAAPb/AAABAAAAAAD///b/AAABAAAAAAD+//b/AAABAAAAAAD9//b/AAABAAAAAAD8//b/AAABAAAAAAD7//b/AAABAAAAAAD6//b/AAABAAAAAAD5//b/AAABAAAAAAD4//b/AAABAAAAAAD3//b/AAABAAAAAAD2//b/AAABAAAAAAD1//b/AAABAAAAAAD0//b/AAABAAAAAADz//b/AAABAAAAAADy//b/AAABAAAAAADx//b/AAABAAAAAADw//b/AAABAAAAAAA=")
tile_set = ExtResource("1_1r51g")

[node name="Charger" parent="." instance=ExtResource("3_6ggfr")]
position = Vector2(267, 443)

[node name="Robot" parent="." instance=ExtResource("4_j21tk")]
position = Vector2(267, 355)
metadata/_edit_group_ = true

[node name="GameCamera" parent="Robot" instance=ExtResource("5_80b03")]
unique_name_in_owner = true
zoom = Vector2(0.55, 0.55)
process_callback = 0
limit_left = -1888
limit_top = -1129
limit_right = 2144
limit_bottom = 1640
limit_smoothed = true
position_smoothing_enabled = true
editor_draw_limits = true
metadata/_edit_lock_ = true

[node name="Env" type="Node2D" parent="."]

[node name="BoxAngleOpen" parent="Env" instance=ExtResource("2_gxm6m")]
position = Vector2(-776, 512)

[node name="SlippersBlue" parent="Env" instance=ExtResource("6_3wc6g")]
position = Vector2(1510, 995)
rotation = -0.261799

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
color = Color(1, 1, 1, 0.117647)
blend_mode = 1
shadow_color = Color(0, 0, 0, 0.72549)
height = 1.0

[node name="Icons" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="Control" type="Control" parent="Icons"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="Icons/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -531.5
offset_top = -87.0
offset_right = 531.5
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="ThankYouForPlayingLabel" type="Label" parent="Icons/Control/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 80
text = "THANK YOU FOR PLAYING"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Icons/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -132.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Icons/Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TextureRect" type="TextureRect" parent="Icons/Control/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("7_6kh5w")
stretch_mode = 4

[node name="EarIconTextureRect" type="TextureRect" parent="Icons/Control/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_vxd5m")
stretch_mode = 4

[node name="PauseMenu" parent="." instance=ExtResource("7_0jhxn")]
visible = false
